# 2025-Integration-Test

./: .gitmodules  README.md
.devcontainer/: Dockerfile  docker-compose.yml
docs/: homework.md
rover/configs/: cyclone_configuration.xml  env_vars.sh  nodes_launch.sh  rover.launch.py
rover/ros2/src/fail_detection_cpp/: CMakeLists.txt  package.xml
rover/ros2/src/fail_detection_cpp/include/fail_detection_cpp/: fail_detection.hpp
rover/ros2/src/fail_detection_cpp/src/: fail_detection.cpp
rover/ros2/src/fail_detection_cpp/test/: fail_detection_test.cpp
rover/ros2/src/fail_detection_py/: package.xml
rover/ros2/src/fail_detection_py/fail_detection_py/: fail_detection_node.py
rover/ros2/src/fail_detection_py/tests/: fail_detection_test.py
rover/ros2/src/test_tools/rclpy_tests/: README.md  package.xml  setup.cfg  setup.py
rover/ros2/src/test_tools/rclpy_tests/rclpy_tests/: __init__.py  test_publisher.py  test_service_client.py  test_service_server.py  test_spinner.py  test_subscriber.py
rover/ros2/src/test_tools/rclpy_tests/test/: test_service_interfaces.py  test_topic_interfaces.py
rover/ros2/src/test_tools/rosbag_player/: CMakeLists.txt  README.md  package.xml  setup.cfg
rover/ros2/src/test_tools/rosbag_player/include/rosbag_player/: rosbag_player.hpp
rover/ros2/src/test_tools/rosbag_player/rosbag_player/: __init__.py  rosbag_player.py
rover/ros2/src/test_tools/rosbag_player/src/: rosbag_player.cpp
rover/ros2/src/test_tools/rosbag_player/test/: test_cpp_player.cpp  test_python_player.py
rover/ros2/src/test_tools/rosbag_player/test/__pycache__/: test_python_player.cpython-310-pytest-6.2.5.pyo
rover/ros2/src/utils/: CMakeLists.txt
rover/ros2/src/utils/include/utils/: console.hpp
rover/ros2/src/utils/lib/: console.cpp
