<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbag_player</name>
  <version>0.0.0</version>
  <description>Utility package to play rosbags inside unit tests</description>
  <maintainer email="wilmer.garzon@kiwibot.com">Wilmer Garzon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>utils</depend>

  <build_depend>ament_cmake_python</build_depend>
  <build_export_depend>ament_cmake_python</build_export_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
